--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,10 @@ div.imgFondo{
 .boton:active {
         background-color: #3e468e;
       }
+
+.fecha{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-left: 30px;
+  font-size: large
+}
+
