--- a/src/styles.css
+++ b/src/styles.css
@@ -17,10 +17,10 @@
   margin-left: 10px;
 }
 
-div.imgFondo{
+/* div.imgFondo{
     display:flex;
-    justify-content:end;
-}
+    
+} */
 .imagen1{
     height:620px;
    
@@ -47,5 +47,15 @@ div.imgFondo{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left: 30px;
   font-size: large
+}
+#cotizacionDia{
+
+  margin: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: medium;
+  color: #2637ca;
+  ;
+  font-style: inherit;
+
 }
 
